src/css/theme.css
p {
  font-size: 16px;
}

h4 {
  padding-bottom: 2%;
}

.navbar-fixed {
   z-index: 999; 
}

.row {
  margin: 0;
}

.brand-logo {
  padding-left: 20px !important;
}

.header {
  color: white;
}

.main {
  padding: 3% 0px 3% 0px;
  margin:  0px 8% 0px 8%;
}

/* Info */
.info {
  background-color: rgb(250, 250, 250);
}

.info img {
  max-width: 25%;
}

.about {
  background-color: rgb(244, 244, 244);
}

.about img {
  max-width: 70%;
  margin-bottom: -10%;
}

/* Staff */
.staff {
  background-color: rgb(250, 250, 250);
}

.no-padding {
  padding: 0;
}


.staff i {
  font-size: 25px;
  margin: 0px .5% 0px .5%;
  color: #212121;
}

.staff i:hover {
  color: rgb(70, 70, 70);
}

.vip {
  background-color: rgb(244, 244, 244)
}

.screenshots {
  background-color: rgb(250, 250, 250);
}

/* Responsiveness */
@media screen and (max-width: 992px) {
  .main {
    padding: 10% 0 10% 0;
  }

  .about, .page-footer {
    text-align: center;
  }
  
  .about img {
    padding-bottom: 8%;
  }

  .screenshots .row .col {
    padding: 2px 2px 2px 2px;
  }
}

@media screen and (min-width: 992px) {
  .contact .card-panel {
    margin: 3% 25% 3% 25%;
  }

  .screenshots .row:last-child {
    padding-top: 1.33%;
  }
}

/* Transparent Nav Stuff */
nav {
    background-color: transparent;
    -webkit-transition: background-color 0.5s ease-in-out;
    -moz-transition: background-color 0.5s ease-in-out;
    -ms-transition: background-color 0.5s ease-in-out;
    -o-transition: background-color 0.5s ease-in-out;
    transition: background-color 0.5s ease-in-out;
}

/* Carousel */

#demo-carousel, #demo-carousel2 { 
    min-height: 500px;
}

.carousel #default_car{
    margin-top:-10%;
    width:500px !important;
}

.carousel #bigger_car{
    margin-top:-13%;
    width:620px !important;
    height: 10px !important;
}

/* Card */

.card span {
    margin-left: 6%
}

/* Texts */
div.text_left {
  text-align: left;
}

.defaultlist li {
    list-style: square !important;
    margin-left: 35px;
}

